--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -10,6 +10,13 @@
 }
 
 /*shared style */
+.secondary-bg{
+    background-color: #FFF8F3;
+}
+
+.text-center{
+    text-align: center;
+}
 .text-primary{
     color: rgb(253, 110, 10);
 }
@@ -25,6 +32,16 @@
     font-size: 20px;
     border: none;
 }
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+.section-description{
+    font-size: 18px;
+    color: #757575;
+}
+
 /*header*/
 
 .header{
@@ -87,4 +104,44 @@ nav li a{
     font-size: 18px;
     font-weight: 400;
     color: #757575;
+}
+/*main style*/
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+
+/*about styles*/
+
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+} 
+.about-items{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+}                  
+.item-description{
+    font-weight: 700;
+    color: #474747;
+}
+.item-title{
+    color: #757575;
+}
+/*skill section styles*/
+
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding:30px ;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
