--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -184,3 +184,26 @@ footer input[type="text"], footer input[type="email"], footer textarea {
     margin-bottom: 24px;
     border: none;
 }
+
+/* responsive media qurey */
+.hide{
+    display: none;
+}
+
+@media screen and (max-width:576px) {
+    .skills-container, .resume-container, footer, .about-items {
+        flex-direction: column;
+    }
+    footer, .about{
+        padding: 20px;
+    }
+    .footer-colum{
+        width: 100%;
+    }
+    footer input[type="text"], footer input[type="email"], footer textarea{
+        width: calc(100% - 40px);
+    }
+
+
+    
+}
