--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -191,9 +191,33 @@ footer input[type="text"], footer input[type="email"], footer textarea {
 }
 
 @media screen and (max-width:576px) {
-    .skills-container, .resume-container, footer, .about-items {
+    .skills-container,
+     .resume-container,
+     .banner, 
+     footer, 
+     nav, 
+     nav > ul ,
+    .about-items {
         flex-direction: column;
     }
+
+    .banner{
+        margin: 20px;
+    }
+    .header{
+        background-image: none;
+    }
+    .banner-profile-pic{
+        width: 100%;
+        height: 100%;
+    }
+    nav > ul{
+        gap: 20px;
+    }
+    .btn-primary{
+        margin-bottom: 20px;
+    }
+
     footer, .about{
         padding: 20px;
     }
